k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-blog-service
spec:
  selector:
    app: fastapi-blog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
